# rtriibe

./: ReadME.md  docker-compose.dev.yml  docker-compose.local.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  config.ini  pyproject.toml  start-backend.dev.sh
backend/alembic/: env.py
backend/alembic/versions/: 73fdd3a2637c_fresh_start.py  c02457e464ee_update_candidate_model.py
backend/app/: config.py  server.py
backend/app/data/: questions.json
backend/app/database/: __init__.py  config.py  database.py
backend/app/database/base/: model.py
backend/app/database/candidate/: __init__.py  crud.py  model.py
backend/app/database/user/: model.py  service.py
backend/app/routers/: qualification.py
backend/app/schemas/: candidate.py
backend/app/util/: auth.py  interview_bot.py  logging.py  openai_client.py  twilio_client.py  voice_generator.py
backend/scripts/: start-backend.dev.sh
